src/systems/ec/implementations/vanilla/packages/ec-component-menu/ec-component-menu.scss
/**
 * Menu component
 * @define menu
 */

// Import base
@import '@ecl/ec-base/ec-base';

// Check if overridden dependencies are already loaded, if needed
@include check-imports(('ec-component-link', 'ec-component-button'));

@mixin ecl-menu() {
  .ecl-menu {
    background-color: $ecl-color-blue;
    margin: 0;
    padding-bottom: $ecl-spacing-m;
    padding-top: $ecl-spacing-m;
  }

  .ecl-menu__site-name {
    color: $ecl-color-white;
    font: $ecl-font-2-xl;
  }

  /* stylelint-disable-next-line order/order */
  @include ecl-media-breakpoint-up(lg) {
    .ecl-menu {
      padding-bottom: 0;
      padding-top: $ecl-spacing-l;
    }

    .ecl-menu__site-name {
      font: $ecl-font-3-xl;
      margin-bottom: $ecl-spacing-l;
    }
  }

  /*
   * Menu toggle
   */
  .ecl-menu__toggle {
    float: right;
    font: $ecl-font-xs;
    margin-top: -$ecl-spacing-xs;
    padding: $ecl-spacing-xs;
    text-align: center;
  }

  .ecl-menu__toggle,
  .ecl-menu__toggle:hover,
  .ecl-menu__toggle:focus,
  .ecl-menu__toggle:active,
  .ecl-menu__toggle:visited {
    color: $ecl-color-white;
  }

  .ecl-menu__toggle-close,
  .ecl-menu__toggle-open {
    align-items: center;
    display: flex;
    flex-direction: column;
    margin-top: -0.1rem; // visually center the icon
  }

  .ecl-menu__toggle-close {
    display: none;
  }

  .ecl-menu[aria-expanded='true'] {
    padding-bottom: 0;

    .ecl-menu__toggle-close {
      display: flex;
    }

    .ecl-menu__toggle-open {
      display: none;
    }
  }

  /* stylelint-disable-next-line order/order */
  @include ecl-media-breakpoint-up(lg) {
    .ecl-menu__toggle {
      display: none;
    }
  }

  /*
   * First level
   */
  .ecl-menu__list {
    box-sizing: border-box;
    clear: right;
    display: none;
    flex-direction: column;
    flex-grow: 1;
    list-style: none;
    list-style-image: url('data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7');
    margin-bottom: 0;
    margin-top: 0;
    padding-left: 0;
    padding-top: 1px; // Used to display separator
    position: relative;

    &::before {
      background-color: $ecl-color-blue-50;
      box-sizing: border-box;
      content: '';
      height: 100%;
      left: 50%;
      position: absolute;
      top: 0;
      transform: translateX(-50%);
      width: 100vw;
    }

    /* Force display if JS is disabled */
    .no-js & {
      display: flex;
    }
  }

  .ecl-menu[aria-expanded='true'] .ecl-menu__list {
    display: flex;
  }

  .ecl-menu__item {
    box-sizing: content-box;
    position: relative;

    &::before {
      background-color: $ecl-color-blue;
      box-sizing: border-box;
      content: '';
      height: 100%;
      left: 50%;
      position: absolute;
      top: 0;
      transform: translateX(-50%);
      width: 100vw;
    }
  }

  .ecl-menu__link {
    border-bottom: 1px solid $ecl-color-blue-50;
    color: $ecl-color-white;
    display: flex;
    font: $ecl-font-m;
    font-weight: $ecl-font-weight-bold;
    justify-content: space-between;
    padding-bottom: $ecl-spacing-s;
    padding-top: $ecl-spacing-s;
    position: relative;
    text-decoration: none;

    &:hover,
    &:focus,
    &:active {
      color: $ecl-color-white;
      text-decoration: underline;
    }

    &:focus {
      outline: 3px solid $ecl-color-yellow;
    }
  }

  .ecl-menu__item:last-of-type .ecl-menu__link {
    border-bottom-width: 0;
  }

  .ecl-menu__link-icon {
    transition: none;
  }

  .ecl-menu__item[aria-expanded='true'] .ecl-menu__link-icon {
    transform: rotate(0);
  }

  /* stylelint-disable-next-line order/order */
  @include ecl-media-breakpoint-up('lg') {
    .ecl-menu__list {
      display: flex;
      flex-direction: row;

      &::before {
        display: none;
      }
    }

    .ecl-menu__item {
      &::before {
        display: none;
      }
    }

    .ecl-menu__link {
      align-items: center;
      border-bottom-width: 0;
      color: $ecl-color-white;
      justify-content: flex-start;
      padding-bottom: $ecl-spacing-m;
      padding-left: $ecl-spacing-m;
      padding-right: $ecl-spacing-s;
      padding-top: $ecl-spacing-m;

      &:hover,
      &:active {
        color: $ecl-color-white;
      }

      &:focus {
        color: $ecl-color-white;
        outline-offset: -3px;
      }
    }

    .ecl-menu__item--current {
      .ecl-menu__link {
        background-color: $ecl-color-blue-120;
      }
    }

    .ecl-menu__item[aria-expanded='true'] {
      .ecl-menu__link {
        background-color: $ecl-color-blue-5;
        color: $ecl-color-blue;
      }
    }

    .ecl-menu__link-icon {
      height: $ecl-icon-2-xs;
      margin-left: $ecl-spacing-xs;
      width: $ecl-icon-2-xs;
    }
  }

  /*
   * Second level
   */
  .ecl-menu__mega {
    box-sizing: border-box;
    display: none;
    flex-direction: column;
    flex-grow: 1;
    padding-bottom: $ecl-spacing-m;
    padding-top: $ecl-spacing-m;
    position: relative;

    &::before {
      background-color: $ecl-color-blue-5;
      box-sizing: border-box;
      content: '';
      height: 100%;
      left: 50%;
      position: absolute;
      top: 0;
      transform: translateX(-50%);
      width: 100vw;
    }

    /* Force display if JS is disabled */
    .no-js & {
      display: flex;
    }
  }

  .ecl-menu__item[aria-expanded='true'] .ecl-menu__mega {
    display: flex;
  }

  .ecl-menu__sublist {
    list-style: none;
    list-style-image: url('data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7');
    margin: 0;
    padding: 0;
  }

  .ecl-menu__subitem {
    box-sizing: border-box;
  }

  .ecl-menu__subitem--current {
    position: relative;

    &::before {
      background-color: $ecl-color-blue-25;
      box-sizing: border-box;
      content: '';
      height: 100%;
      left: 50%;
      position: absolute;
      top: 0;
      transform: translateX(-50%);
      width: 100vw;
    }
  }

  .ecl-menu__sublink {
    color: $ecl-color-blue;
    display: block;
    font: $ecl-font-m;
    padding-bottom: $ecl-spacing-s;
    padding-top: $ecl-spacing-s;
    position: relative;
    text-decoration: none;

    &:hover,
    &:focus,
    &:active {
      color: $ecl-color-blue;
      text-decoration: underline;
    }

    &:focus {
      outline: 3px solid $ecl-color-yellow;
    }
  }

  .ecl-menu__subitem:first-of-type .ecl-menu__sublink {
    padding-top: 0;
  }

  .ecl-menu__subitem:last-of-type .ecl-menu__sublink {
    padding-bottom: 0;
  }

  /* stylelint-disable-next-line order/order */
  @include ecl-media-breakpoint-up('lg') {
    .ecl-menu__mega {
      background-color: $ecl-color-blue-5;
      box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.2);
      left: 0;
      padding-bottom: calc(#{$ecl-spacing-xl} - #{$ecl-spacing-s});
      padding-top: $ecl-spacing-xl;
      position: absolute;
      z-index: $ecl-z-index-dropdown;

      &::before {
        display: none;
      }
    }

    .ecl-menu__mega--rtl {
      left: auto;
      right: 0;
    }

    .ecl-menu__item[aria-expanded='true'] .ecl-menu__link {
      z-index: calc(#{$ecl-z-index-dropdown} + 1); // hack for box-shadow
    }

    .ecl-menu__sublist {
      display: grid;
      grid-auto-columns: max-content;
      grid-auto-flow: column;
      grid-template-rows: auto auto auto auto;
    }

    .ecl-menu__subitem::before {
      display: none;
    }

    .ecl-menu__subitem {
      box-sizing: border-box;
      max-width: 20ch;
      padding-bottom: $ecl-spacing-s;
    }

    .ecl-menu__subitem:last-of-type {
      margin-bottom: 0;
    }

    .ecl-menu__sublink {
      margin-left: $ecl-spacing-m;
      margin-right: $ecl-spacing-m;
      padding: 0;
    }

    .ecl-menu__sublink--current {
      font-weight: $ecl-font-weight-bold;
    }
  }

  /*
   * Group 2
   */
  .ecl-menu--group2 {
    min-height: $ecl-line-height-2-xl;
  }

  /* stylelint-disable-next-line order/order */
  @include ecl-media-breakpoint-up('lg') {
    .ecl-menu--group2 {
      padding-top: 0;
    }
  }
}

@include exports('ec-component-menu') {
  @include ecl-menu();
}

